--- a/index.html
+++ b/index.html
@@ -1129,18 +1129,36 @@ function fmtSF(n) { return n == null ? "N/A" : n.toLocaleString("en-US") + " SF"
 
 const map = L.map("map", { zoomControl: true }).setView([36.14, -86.76], 11);
 
+// Create a pane behind markers so boundaries never block clicks
+map.createPane("boundaryPane");
+map.getPane("boundaryPane").style.zIndex = 250;
+map.getPane("boundaryPane").style.pointerEvents = "none";
+
 L.tileLayer("https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", {
   attribution: "&copy; OpenStreetMap &copy; CARTO",
   maxZoom: 19
 }).addTo(map);
 
-// Davidson County (Nashville) boundary — loaded from GeoJSON file
-let countyLayer = L.layerGroup().addTo(map);
+// Dark mask over non-Davidson counties
+fetch("TN_counties_mask.geojson")
+  .then(r => r.json())
+  .then(data => {
+    L.geoJSON(data, {
+      style: { color: "#999", weight: 0.5, fillColor: "#2E4553", fillOpacity: 0.45 },
+      interactive: false,
+      pane: "boundaryPane"
+    }).addTo(map);
+  });
+
+// Davidson County (Nashville) boundary
+let countyLayer = L.layerGroup({ pane: "boundaryPane" }).addTo(map);
 fetch("Davidson_County_Boundary.geojson")
   .then(r => r.json())
   .then(data => {
     const layer = L.geoJSON(data, {
-      style: { color: "#3A5566", weight: 2.5, fillColor: "#3A5566", fillOpacity: 0.04, dashArray: "6 4" }
+      style: { color: "#3A5566", weight: 2.5, fillColor: "transparent", fillOpacity: 0 },
+      interactive: false,
+      pane: "boundaryPane"
     });
     countyLayer.addLayer(layer);
   });
